[package]
name = "amiko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"

[dev-dependencies]
redis = "0.25.3"
# mockall = "0.12.1"
mockall_double = "0.3.1"
# criterion = "0.5.1"

[[bench]]
name = "speed"
harness = false
