[package]
name = "amiko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
rand = "0.8.5"
regex = "1.10.4"
smallvec = "1.13.2"

[dev-dependencies]
redis = "0.25.3"
# mockall = "0.12.1"
mockall_double = "0.3.1"
criterion = "0.5.1"

[[bench]]
name = "e2ebench"
harness = false

[[bench]]
name = "kvbench"
harness = false
